# final_project_experiment

./: .gitignore  README.md  question.db
.ipynb_checkpoints/: experiment-checkpoint.ipynb
ai_scrap/: ai_scrap.db  database.py  main.py  models.py  schemas.py
ai_scrap/routers/: __init__.py  aiscrap.py  home.py
app/: __main__.py  database.py  main.py  predict.py  schemas.py  tables.py  utils.py
app/script/: article_form.html  design.css  login_form.html  main_form.html
board/: board.py  index_settings.py  install.sh  pyproject.toml
code/: 02_elastic.ipynb  Elasticsearch로 CRUD 구현하기.ipynb  arguments.py  configure.py  dd.sh  hyp.yaml  inference_copy.py  load_data.py  make_mbn_news_wiki.ipynb  make_news_wiki.ipynb  mrc_metrics.py  news_preprocessing.py  postprocessing.py  predict.py  preprocess.py  prototype.py  prototype_predict.py  pyproject.toml  retrieval.py  run_mrc.py  sparse_retrieval.py  train_copy.py  trainer_qa.py
code/.ipynb_checkpoints/: EDA-checkpoint.ipynb  Elasticsearch로 CRUD 구현하기-checkpoint.ipynb  experiment-checkpoint.ipynb  make_mbn_news_wiki-checkpoint.ipynb  데이터 살펴보기-checkpoint.ipynb
code/experiment/: news_preprocessing.py  test_cl.py  test_cleansing.ipynb
serving/: AIPaperboy.py  pyproject.toml
serving/routers/: ainews.py  aiscrap.py  home.py  login.py  news.py  scrap.py  scrapnews.py  upload.py  upload.py~HEAD
serving/schema/: database.py  models.py  schemas.py
serving/services/: aiscrappedboard.py  aiscrappednewscontent.py  batchserving.py  homeboard.py  managelogin.py  managenewsscrap.py  manageuserinput.py  newscontent.py  (+2 more)
(+9 files in other folders)
