[tool.poetry]
name = "Wjc_FAST_API"
version = "0.1.0"
description = "FASTAPI_TEST"
authors = ["woongjoonchoi <oongjoon10@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2 , <3.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
pandas = "1.0.0"
SQLAlchemy = "1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
